--- a/administrator/PengajuanDinas.html
+++ b/administrator/PengajuanDinas.html
@@ -51,6 +51,11 @@
         <link rel="stylesheet" href="../assets/css/dashforge.css" />
         <link rel="stylesheet" href="../assets/css/skin.deepblue.css" />
         <link rel="stylesheet" href="../assets/css/dashforge.demo.css" />
+        <style>
+            .accordion-button::after {
+                display: none !important;
+            }
+        </style>
     </head>
     <body>
         <aside class="aside aside-fixed">
@@ -343,6 +348,94 @@
                     <div class="row row-xs">
                         <div class="col-sm-12 col-lg-12">
                             <div data-label="List Data Pengajuan Dinas" class="df-example demo-table">
+                                <div class="accordion mg-b-20" id="accordionExample">
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header">
+                                        <button class="accordion-button bg-primary text-white tx-14" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                            <i class="fas fa-filter mg-r-5"></i> Filter Data
+                                        </button>
+                                        </h2>
+                                        <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                                            <div class="accordion-body">
+                                                <div class="row row-sm">
+                                                    <div class="col-lg-6">                                        
+                                                        <div class="form-group">
+                                                            <label for="formGroup" class="d-block">SKPD</label>
+                                                            <select class="form-select select2">
+                                                                <option label="Pilih TipeKerja"></option>
+                                                                <option value="Dinas">Dinas Kantor</option>
+                                                                <option value="WFH">Work From Home (WFH)</option>
+                                                                <option value="WFA">Work From Anyware (WFA)</option>
+                                                            </select>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-lg-6">
+                                                        <div class="form-group">
+                                                            <label for="formGroup" class="d-block">Unit Kerja</label>
+                                                            <select class="form-select select2">
+                                                                <option label="Pilih Unit Kerja"></option>
+                                                                <option value="Dinas">Dinas Kantor</option>
+                                                                <option value="WFH">Work From Home (WFH)</option>
+                                                                <option value="WFA">Work From Anyware (WFA)</option>
+                                                            </select>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-lg-3">
+                                                        <div class="form-group">
+                                                            <label for="formGroup" class="d-block">Tipe Kerja</label>
+                                                            <select class="form-select select2">
+                                                                <option label="Pilih Tipe Kerja"></option>
+                                                                <option value="Dinas">Dinas Kantor</option>
+                                                                <option value="WFH">Work From Home (WFH)</option>
+                                                                <option value="WFA">Work From Anyware (WFA)</option>
+                                                            </select>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-lg-3">
+                                                        <div class="form-group">
+                                                            <label for="formGroup" class="d-block">Status Validasi</label>
+                                                            <select class="form-select select2">
+                                                                <option label="Pilih Status Validasi"></option>
+                                                                <option value="Vlidasi Atasan">Validasi Atasan</option>
+                                                                <option value="Menunggu Validasi">Menunggu Validasi</option>
+                                                                <option value="Tolak Validasi">Tolak Validasi</option>
+                                                                <option value="Divalidasi Sistem">Divalidasi Sistem</option>
+                                                                <option value="Input Operator">Input Operator</option>
+                                                            </select>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-lg-2">
+                                                        <div class="form-group">
+                                                            <label for="formGroup" class="d-block">Bulan</label>
+                                                            <select class="form-control select2">
+                                                                <option label="Pilih Bulan"></option>
+                                                                <option value="Januari">Januari</option>
+                                                                <option value="Februari">Februari</option>
+                                                                <option value="Maret">Maret</option>
+                                                                <option value="April">April</option>
+                                                                <option value="Mei">Mei</option>
+                                                                <option value="Juni">Juni</option>
+                                                                <option value="Juli">Juli</option>
+                                                                <option value="Agustus">Agustus</option>
+                                                                <option value="September">September</option>
+                                                                <option value="Oktober">Oktober</option>
+                                                                <option value="November">November</option>
+                                                                <option value="Desember">Desember</option>
+                                                            </select>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-lg-4">
+                                                        <div class="form-group">
+                                                            <label for="formGroup" class="d-block">&nbsp;</label>
+                                                            <button class="btn btn-sm pd-x-15 btn-primary btn-uppercase"><i data-feather="refresh-cw" class="wd-10 mg-r-5"></i> Filter</button>
+                                                            <button class="btn btn-sm pd-x-15 btn-danger btn-uppercase"><i data-feather="trash" class="wd-10 mg-r-5"></i> Hapus Data</button>                                   
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>                         
                                 <!-- row -->
                                 <table id="datatables" class="table table-hover" style="width: 100%;">
                                     <thead class="thead-primary">
@@ -364,14 +457,24 @@
                                                 <h6 class="tx-13 mg-b-2 tx-primary">Katherine Lumaad</h6>
                                                 <p class="tx-12 mg-b-10">196708142001121002</p>
                                             </td>
-                                            <td>Dinas Luar Full</td>
-                                            <td>02/01/2023</td>
-                                            <td>Kordinasi Ke Kemendagri</td>
                                             <td>
-                                                <a href="form-elements.html" class="tx-medium d-flex align-items-center gap-1">Lihat Dokumen <ion-icon name="arrow-forward-outline" aria-label="arrow forward outline" role="img" class="md hydrated"></ion-icon></a>
+                                                Dinas Luar Full
                                             </td>
                                             <td>
-                                                <p class="tx-12 mg-b-10">Fingerprint</p>
+                                                <p class="mg-0">28/07/2025, 29/07/2025, 30/07/2025</p>
+                                                <small class="tx-12 mg-0">
+                                                    <strong>Dibuat Tanggal :</strong> 27/07/2025 10:02:20
+                                                </small>   
+                                                <p class="tx-12 mg-0"><strong>Divalidasi Tanggal :</strong> 27/07/2025 10:02:20</p>
+                                            </td>
+                                            <td>Kordinasi Ke Kemendagri</td>
+                                            <td>
+                                                <a href="form-elements.html" class="tx-medium d-flex align-items-center gap-1 text-decoration-underline">Lihat Dokumen <ion-icon name="arrow-forward-outline" aria-label="arrow forward outline" role="img" class="md hydrated"></ion-icon></a>
+                                            </td>
+                                            <td>
+                                                <span class="badge text-bg-success">Validasi Atasan</span>
+                                                <h6 class="tx-13 mg-0 tx-primary">Katherine Lumaad</h6>
+                                                <p class="tx-12 mg-b-10">196708142001121002</p>
                                             </td>
                                             <td>
                                                 <button type="button" class="btn btn-outline-primary btn-icon mg-b-4" data-bs-toggle="modal" data-bs-target="#ModalTambah"><i data-feather="edit"></i></button>
@@ -393,6 +496,7 @@
         </div>
 
         <script src="../lib/jquery/jquery.min.js"></script>
+        <script src="../lib/jqueryui/jquery-ui.min.js"></script>
         <script src="../lib/bootstrap/js/bootstrap.bundle.min.js"></script>
         <script src="../lib/feather-icons/feather.min.js"></script>
         <script src="../lib/ionicons/ionicons/ionicons.esm.js" type="module"></script>
@@ -427,14 +531,13 @@
                         lengthMenu: "_MENU_ items/page",
                     },
                 });
-
-
+                
+                //Select
                 $('.select2').select2({
                     placeholder: 'Pilihan',
                     searchInputPlaceholder: 'Pencarian',
-                    minimumResultsForSearch: Infinity,
                     width: '100%',
-                    dropdownParent: $('#ModalTambah')
+                    allowClear: true
                 });
                 // Select2
                 $(".dataTables_length select").select2({ minimumResultsForSearch: Infinity });
