--- a/page-signin.html
+++ b/page-signin.html
@@ -47,7 +47,7 @@
     <header class="navbar navbar-header navbar-header-fixed">
       <a href="#" id="mainMenuOpen" class="burger-menu"><i data-feather="menu"></i></a>
       <div class="navbar-brand">
-        <a href="index.html" class="df-logo">dash<span>forge</span></a>
+        <a href="index.html" class="df-logo">Si<span>gnal</span></a>
       </div><!-- navbar-brand -->
     </header><!-- navbar -->
 
@@ -62,7 +62,7 @@
           <div class="sign-wrapper mg-lg-l-50 mg-xl-l-60">
             <div class="wd-100p">
               <h3 class="tx-color-01 mg-b-5">Masuk Ke Akun</h3>
-              <p class="tx-color-03 tx-16 mg-b-40">Silakan login melalui akun Anda untuk melanjutkan.</p>
+              <p class="tx-color-03 tx-16 mg-b-20">Silakan login melalui akun Anda untuk melanjutkan.</p>
               <div class="form-group">
                 <label>NIP Pegawai</label>
                 <input type="number" class="form-control" placeholder="Masukkan NIP Pegawai">
@@ -74,13 +74,6 @@
                 </div>
                 <input type="password" class="form-control" placeholder="Masukkan kata sandi">
               </div>
-              <div class="form-group">
-                <label>Periode</label>
-                <select class="form-select">
-                  <option value="2024">2024</option>
-                  <option value="2025" selected>2025</option>
-                </select>
-              </div>
               <button class="btn btn-brand-02 w-100">Masuk</button>
             </div>
           </div><!-- sign-wrapper -->
@@ -90,7 +83,7 @@
 
     <footer class="footer">
       <div>
-        <span>&copy; 2025 Absensi Online v1.0.0. </span>
+        <span>&copy; 2025 Absensi Digital v1.0.0. </span>
         <span>Created by <a href="https://bkpsdm.palembang.go.id">BKPSDM KOTA PALEMBANG</a></span>
       </div>
     </footer>
@@ -104,7 +97,6 @@
 
     <!-- append theme customizer -->
     <script src="lib/js-cookie/js.cookie.js"></script>
-    <script src="assets/js/dashforge.settings.js"></script>
     <script>
       $(function(){
         'use script'
