--- a/administrator/RekapDinasPegawai.html
+++ b/administrator/RekapDinasPegawai.html
@@ -170,31 +170,35 @@
                         <a href="" class="nav-link"><i data-feather="map"></i> <span>Pengajuan Dinas</span></a>
                         <ul>
                             <li><a href="PengajuanDinas.html">Pengajuan</a></li>
-                            <li><a href="RekapPengajuanDinas.html">Rekap Dinas SKPD</a></li>
-                            <li class="active"><a href="RekapPengajuanDinasPegawai.html">Rekap Dinas Pegawai</a></li>
+                            <li><a href="RekapDinasSKPD.html">Rekap Dinas SKPD</a></li>
+                            <li class="active"><a href="RekapDinasPegawai.html">Rekap Dinas Pegawai</a></li>
                         </ul>
                     </li>
                     <li class="nav-item with-sub">
                         <a href="" class="nav-link"><i data-feather="alert-circle"></i> <span>Pengajuan Izin</span></a>
                         <ul>
                             <li><a href="PengajuanIzin.html">Pengajuan</a></li>
-                            <li><a href="LaporanPengajuanIzin.html">Laporan Pengajuan Izin</a></li>
+                            <li><a href="RekapIzinSKPD.html">Rekap Izin SKPD</a></li>
+                            <li><a href="RekapIzinPegawai.html">Rekap Izin Pegawai</a></li>
                         </ul>
                     </li>
                     <li class="nav-item with-sub">
                         <a href="" class="nav-link"><i data-feather="thermometer"></i> <span>Pengajuan Sakit</span></a>
                         <ul>
                             <li><a href="PengajuanSakit.html">Pengajuan</a></li>
-                            <li><a href="LaporanPengajuanSakit.html">Laporan Pengajuan Sakit</a></li>
+                            <li><a href="RekapSakitSKPD.html">Rekap Sakit SKPD</a></li>
+                            <li><a href="RekapSakitPegawai.html">Rekap Sakit Pegawai</a></li>
                         </ul>
                     </li>
                     <li class="nav-item with-sub">
                         <a href="" class="nav-link"><i data-feather="calendar"></i> <span>Pengajuan Cuti</span></a>
                         <ul>
                             <li><a href="PengajuanCuti.html">Pengajuan</a></li>
-                            <li><a href="LaporanPengajuanCuti.html">Laporan Pengajuan Cuti</a></li>
+                            <li><a href="RekapCutiSKPD.html">Rekap Cuti SKPD</a></li>
+                            <li><a href="RekapCutiPegawai.html">Rekap Cuti Pegawai</a></li>
                         </ul>
                     </li>
+                    
                     
                     <!-- Monitoring Absensi -->
                     <li class="nav-label mg-t-25">Monitoring Absensi</li>
@@ -255,7 +259,7 @@
             </div><!-- content-header -->
 
             <div class="content-body">
-                <div class="container pd-x-0">
+                <div class="pd-x-0">
                     <div class="d-sm-flex align-items-center justify-content-between mg-b-20 mg-lg-b-25 mg-xl-b-30">
                         <div>
                             <nav aria-label="breadcrumb">
@@ -267,9 +271,7 @@
                             <h4 class="mg-b-0 tx-spacing--1">Rekap Dinas Pegawai</h4>
                         </div>
                         <div class="d-none d-md-block">
-                            <div class="btn-group" role="group" aria-label="Basic example">
-                                <button class="btn btn-sm pd-x-15 btn-outline-success btn-uppercase"><i data-feather="file-text" class="wd-10"></i></button>
-                            </div>
+                            <div class="btn-group" role="group" aria-label="Basic example"></div>
                         </div>
                     </div>             
                     <div class="row row-xs">
@@ -341,6 +343,7 @@
                                                         <div class="form-group">
                                                             <label for="formGroup" class="d-block">&nbsp;</label>
                                                             <button class="btn btn-sm pd-x-15 btn-primary btn-uppercase"><i data-feather="refresh-cw" class="wd-10 mg-r-5"></i> Filter</button>
+                                                            <button class="btn btn-sm pd-x-15 btn-outline-success btn-uppercase"><i data-feather="download" class="wd-10 mg-r-5"></i> Export</button>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -349,49 +352,53 @@
                                     </div>
                                 </div>                         
                                 <!-- row -->
-                                <table id="datatables" class="table table-hover" style="width: 100%;">
-                                    <thead class="thead-primary">
-                                        <tr>
-                                            <th rowspan="2">No.</th>
-                                            <th rowspan="2">Nama Pegawai</th>
-                                            <th colspan="4" class="text-center">Dinas Luar</th>
-                                            <th colspan="6" class="text-center">Tugas Lain</th>
-                                            <th rowspan="2">Persentase</th>
-                                        </tr>
-                                        <tr>
-                                            <th>Dinas Luar Full</th>
-                                            <th>Dinas Luar, Tidak Absen Masuk</th>
-                                            <th>Dinas Luar, Tidak Absen Pulang</th>
-                                            <th>Total</th>
-                                            <th>Tugas Lain Full</th>
-                                            <th>Tugas Lain, Tidak Absen Masuk</th>
-                                            <th>Tugas Lain, Tidak Absen Pulang</th>
-                                            <th>Tugas Lain, Apel Gabungan</th>
-                                            <th>Tugas Lain, Gotong Royong</th>
-                                            <th>Total</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>1</td>
-                                            <td>
-                                                <h6 class="tx-13 mg-b-2 tx-primary">Katherine Lumaad</h6>
-                                                <p class="tx-12 mg-b-10">196708142001121002</p>
-                                            </td>
-                                            <td>10</td>
-                                            <td>10</td>
-                                            <td>10</td>
-                                            <td>10</td>
-                                            <td>10</td>
-                                            <td>10</td>
-                                            <td>10</td>
-                                            <td>10</td>
-                                            <td>10</td>
-                                            <td>10</td>
-                                            <td>10</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
+                                <div class="table-responsive">
+                                    <table id="datatables" class="table table-hover table-bordered" style="width: 100%;">
+                                        <thead class="thead-primary">
+                                            <tr>
+                                                <th rowspan="2">Nama Pegawai</th>
+                                                <th rowspan="2">Jabatan</th>
+                                                <th rowspan="2">Jenis Pegawai</th>
+                                                <th colspan="4" class="text-center">Dinas Luar</th>
+                                                <th colspan="6" class="text-center">Tugas Lain</th>
+                                                <th rowspan="2">Persentase</th>
+                                            </tr>
+                                            <tr>
+                                                <th>Dinas Luar Full</th>
+                                                <th>Dinas Luar, Tidak Absen Masuk</th>
+                                                <th>Dinas Luar, Tidak Absen Pulang</th>
+                                                <th>Total</th>
+                                                <th>Tugas Lain Full</th>
+                                                <th>Tugas Lain, Tidak Absen Masuk</th>
+                                                <th>Tugas Lain, Tidak Absen Pulang</th>
+                                                <th>Tugas Lain, Apel Gabungan</th>
+                                                <th>Tugas Lain, Gotong Royong</th>
+                                                <th>Total</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>
+                                                    <h6 class="tx-13 mg-b-2 tx-primary">Katherine Lumaad</h6>
+                                                    <p class="tx-12 mg-b-10">196708142001121002</p>
+                                                </td>
+                                                <td class="text-start">Analis Sumber Daya Manusia Aparatur Ahli Muda</td>
+                                                <td class="text-center">PNS</td>
+                                                <td class="text-end">10</td>
+                                                <td class="text-end">10</td>
+                                                <td class="text-end">10</td>
+                                                <td class="text-end">10</td>
+                                                <td class="text-end">10</td>
+                                                <td class="text-end">10</td>
+                                                <td class="text-end">10</td>
+                                                <td class="text-end">10</td>
+                                                <td class="text-end">10</td>
+                                                <td class="text-end">10</td>
+                                                <td class="text-end">10%</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
                             <!-- df-example -->
                         </div>
